<resources>
    <string name="app_name">Tripeando</string>
    <!--
    <string name="google_geo_api_key">AIzaSyCd895IrjOYGcQ7ziysAMepz2r9Hd1kwIM</string>
    -->
    <string name="google_geo_api_key">AIzaSyABzxsLBMr1wEnw7GjrKvFpx1yjayrW0Xs</string>

    <!-- Navigation Strings Values -->
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="trips">Trips</string>
    <string name="your_trips">Your Trips</string>
    <string name="trip_and_ride">Trips and Rides</string>
    <string name="change_profile_img">Profile Picture</string>
    <string name="results">Results</string>

    <!-- Login Strings Values -->
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_forgot">Forgot my password</string>
    <string name="login_divider">|</string>

    <!-- Search Strings Values -->
    <string name="find_trip_headline">Where is your next adventure?</string>
    <string name="flexible_dates">Flexible Dates</string>
    <string name="find_trip">Find a trip</string>

    <!-- Create Ride Strings Values -->
    <string name="create_ride_hour">00:00 AM</string>

    <!-- Forgot Strings Values -->
    <string name="forgot_reset_headline">Password Reset</string>
    <string name="forgot_reset_copy">We will send you and email with a link to reset your password</string>
    <string name="forgot_button">Reset Password</string>
    <string name="forgot_email_sent">Email sent</string>
    <string name="forgot_sent_copy">Follow the instructions sent to your email. If you can\'t find the email, please check in your spam.</string>

    <!-- Booking Strings Values -->
    <string name="booking_driver_name">Trip with Katy</string>
    <string name="booking_departure_time">Departure at 11:45 am</string>
    <string name="booking_seats">3 open seats</string>
    <string name="booking_currency">CAD$</string>
    <string name="booking_price">30</string>
    <string name="booking_condition">Conditions</string>
    <string name="booking_smoke">No smoking</string>
    <string name="booking_pets">Pet friendly</string>
    <string name="booking_button">Book Trip</string>

    <!-- General Strings Values -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="login">Log In</string>
    <string name="logout">Log out</string>
    <string name="singup">Sign Up</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="create_ride">Create Ride</string>
    <string name="back_btn">Back Button</string>
    <string name="people_number">0</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="price">Price:</string>
    <string name="seats">Seats:</string>
    <string name="passengers">Passengers:</string>
    <string name="conditions">Conditions:</string>
    <string name="no_pets">No Pets</string>
    <string name="no_smoke">No Smoking</string>
    <string name="no_eat">No Eating</string>
    <string name="no_drink">No Drinking</string>
    <string name="price_value">$0.00</string>
    <string name="date_holder">00/00/0000</string>
    <string name="time_holder">00:00 AM</string>
    <string name="name">Name</string>
    <string name="driver_detail">Driver Detail:</string>
    <string name="trip_details">Trip Details:</string>
    <string name="trip_passengers">Passengers:</string>
    <string name="delete">Delete</string>
    <string name="booking_thanks">Thank you for booking!</string>
    <string name="no_chat">No chats available.</string>
    <string name="no_trip">No trips or rides found.</string>
    <string name="no_result">Sorry, no trips found.</string>
    <string name="empty"></string>
    <string name="title_activity_find_trips">FindTrips</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- String for App Rating Dialog Box -->
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you liked using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>

</resources>