<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back_btn"
        android:text="@string/empty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingHorizontal="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:elevation="12dp"
                android:id="@+id/view2"
                app:cardCornerRadius="60dp"
                app:cardBackgroundColor="@color/brown"
                android:layout_centerHorizontal="true"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:id="@+id/chatImageRV"
                    android:src="@drawable/picture"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true">
                </ImageView>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginTop="50dp"
                android:textSize="34sp"
                android:text="@string/booking_driver_name" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="17dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/booking_departure_time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textSize="17dp"
                    android:layout_weight="1"
                    android:text="@string/booking_seats" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/brown"
                    android:gravity="right"
                    android:textSize="17dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_weight="1"
                    android:text="@string/booking_price" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textSize="17dp"
                android:textColor="@color/brown"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/booking_condition" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:fontFamily="@font/montserrat"
                    android:layout_weight="1"
                    android:text="@string/booking_smoke" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:fontFamily="@font/montserrat"
                    android:layout_weight="1"
                    android:text="@string/booking_pets" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/booking_button" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>