<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRideActivity">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_card"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createRideBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/back"
                android:backgroundTint="@color/brown"
                app:backgroundTint="@color/brown"
                android:contentDescription="@string/back_btn"
                android:text="@string/empty"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:textSize="22sp"
                android:textColor="@color/brown"
                android:fontFamily="@font/montserrat_bold"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:text="@string/create_ride" />
        </LinearLayout>

        <EditText
            android:id="@+id/profileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/input_bottom_border"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:paddingVertical="15dp"
            android:textSize="12sp"
            android:hint="@string/from" />

        <EditText
            android:id="@+id/tripTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/input_bottom_border"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:paddingVertical="15dp"
            android:textSize="12sp"
            android:hint="@string/to" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tripFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_full_border"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:paddingVertical="15dp"
                android:textSize="12sp"
                android:hint="@string/date_holder" />

            <EditText
                android:id="@+id/tripTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_full_border"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:paddingVertical="15dp"
                android:textSize="12sp"
                android:hint="@string/time_holder" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/less" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/input_full_border"
                android:hint="@string/people_number"
                app:boxStrokeWidth="0dp"
                android:layout_marginHorizontal="10dp"
                app:startIconContentDescription="@string/people_number"
                app:startIconDrawable="@drawable/user"
                app:startIconTint="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginEmail"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/more" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateRide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="50dp"
            android:text="@string/create_ride" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>