<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.RegisterActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingHorizontal="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:elevation="12dp"
                android:id="@+id/view2"
                app:cardCornerRadius="60dp"
                app:cardBackgroundColor="@color/brown"
                android:layout_centerHorizontal="true"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9">

                <ImageView
                    android:id="@+id/chatImageRV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/picture"></ImageView>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/profile_picture" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bottom_border"
                android:hint="@string/first_name"
                app:boxStrokeWidth="0dp"
                android:layout_marginTop="10dp"
                app:startIconContentDescription="@string/first_name"
                app:startIconTint="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bottom_border"
                android:hint="@string/last_name"
                app:boxStrokeWidth="0dp"
                android:layout_marginTop="10dp"
                app:startIconContentDescription="@string/last_name"
                app:startIconTint="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bottom_border"
                android:hint="@string/email"
                app:boxStrokeWidth="0dp"
                android:layout_marginTop="10dp"
                app:startIconContentDescription="@string/email"
                app:startIconTint="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bottom_border"
                android:hint="@string/phone"
                app:boxStrokeWidth="0dp"
                android:layout_marginTop="10dp"
                app:startIconContentDescription="@string/phone"
                app:startIconTint="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/montserrat"
                    android:inputType="text|textEmailAddress|phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bottom_border"
                android:hint="@string/password"
                app:boxStrokeWidth="0dp"
                android:layout_marginTop="10dp"
                app:startIconContentDescription="@string/password"
                app:startIconTint="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textEmailAddress"
                    android:password="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bottom_border"
                android:hint="@string/repeat_password"
                app:boxStrokeWidth="0dp"
                android:layout_marginTop="10dp"
                app:startIconContentDescription="@string/repeat_password"
                app:startIconTint="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textEmailAddress"
                    android:password="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="100dp"
                android:text="@string/singup" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back_btn"
        android:text="@string/empty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>